 * Cleaned up filters in Items screen.

2006-11-07 cjg
 * Added $session->render_input_field and made all metafield <input> elements 
    go via this method.
 * Added javascript hooks to register code it be exexed when buttons are
    pressed.
 * Upload now popups a confirm box if you have a value in the file upload but
    push "Next>" 
 * Renamed "Add" to "Upload" for clarity.
 * Renamed workflow->from to workflow->update_from_form
 * Workflow update_from_form and component methods now take a handle to the
    processor (or something which accepts add_message( $type, $msg). 
 * Component->update_from_form now registers errors with the processor rather
    than muddling them with the validation messages.
 * Added top margin to message boxes.
 * Added a render_buttom method to $session
 * Uploading a 0byte file now fails with an error.
 * Added empty checkbox square and items filters now show this rather than a
    cross.
 * Renamed some instances of "Deletion" to "Retired"
 * Removed some unused javascript 

2006-11-07 cjg
 * title of pages now has archive id AFTER page name.

2006-11-08 cjg 
 * Search results now include <link>'s to all the various metadata formats.
 * Abstract pages now lincude <link>'s to various metadata formats
 * Fixed issue that links were not included in dynamic templates.
 * Rewrote document security code and security config file.
 * Renamed $doc->can_view to $doc->user_can_view
 * Security config subs now return ALLOW and DENY not 0 and 1.
 * Fixed bug in buttons in EPrint Remove.
 * Changed rss mimetpye from text/xml to application/rss+xml
 * Renamed XML export methods to EP3 XML
 * Corrected some calls to hidden_field
 * cgi/users/login no longer tries to set login cookie
 * cgi/users/login now provides link to target docum,ent, rather than
    a redirect.
 * Added some vital code to generate_apacheconf to trip the Auth handlers
    into working.

2006-11-08 cjg
 * Used message style for login and logout errors and messages.